# biohackathon-germany-2025

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ontology_axioms.yaml  pyproject.toml  rules.yaml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml
docs/: RULES.md  architecture.md  ideas.md  manuscript.md  mcp-tools.md  roadmap.md  todo.md  unified-data-loader-design.md
scripts/: build_hpo_sibling_map.py  debug_neo4j_subgraph.py  download_cosmic_cgc.py  enrich_citations.py  enrich_disgenet.py  enrich_publication_metadata.py  enrich_retraction_status.py  load_monarch_to_neo4j.py  mcp_demo.py  train_suspicion_gnn.py
src/kg_skeptic/: __init__.py  __main__.py  app.py  error_types.py  feedback.py  models.py  ner.py  pipeline.py  provenance.py  rules.py  subgraph.py  suspicion_gnn.py
src/nerve/: __init__.py  __main__.py  app.py  feedback.py  logic.py  mcp_server.py  models.py  ner.py  nli_calibration.py  ontology_constraints.py  pipeline.py  provenance.py  rules.py  subgraph.py  suspicion_gnn.py  temporal.py
src/pyvis/: __init__.pyi  network.pyi
src/sklearn/: metrics.pyi
stubs/pyvis/: __init__.pyi  network.pyi
stubs/sklearn/: __init__.pyi  (+2 more)
tests/: __init__.py  test_app_curated_kg.py  test_error_types.py  test_feedback.py  test_models.py  test_ner.py  test_nli_calibration.py  test_ontology_constraints.py  test_pipeline.py  test_pipeline_e2e.py  test_pipeline_helpers.py  test_provenance.py  test_rules.py  test_subgraph.py  test_suspicion_gnn.py  test_temporal.py  test_train_suspicion_gnn.py
(+78 files in other folders)
