[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-skeptic"
version = "0.0.0"
description = "Neuro-symbolic, KG-verified skeptic that audits LLM bio-agents."
authors = [{ name = "Biohackathon Team" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pyyaml>=6.0.0",
  "streamlit>=1.40.0",
]

[dependency-groups]
dev = [
  "ruff~=0.6.0",
  "mypy~=1.10.0",
  "pytest~=8.3.0",
  "black>=25.11.0",
  "types-PyYAML>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that make network requests (deselect with '-m not e2e')",
]
addopts = "-m 'not e2e'"
